一覧表のヘッダーを日本語にし、ソートできるようにした。

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -5,4 +5,8 @@
 済ログアウト機能
 
 4/5
-・data_upload.phpへ遷移してくると「0件登録しました」メッセージが表示されてしまう。
+済data_upload.phpへ遷移してくると「0件登録しました」メッセージが表示されてしまう。
+4/8
+・一覧の列幅を調整する
+・入力編集画面を作成する
+
