データ削除機能の実装 データ登録、修正画面を修正（UI、邦題の入力必須）

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -7,6 +7,11 @@
 4/5
 済data_upload.phpへ遷移してくると「0件登録しました」メッセージが表示されてしまう。
 4/8
-・一覧の列幅を調整する
-・入力編集画面を作成する
+済一覧の列幅を調整する
+済入力編集画面を作成する
+済・check.phpからDBに登録、修正する
+済データ削除を出来るようにする
+済新規入力、最低限邦題を入れない限り確認画面に遷移させない
+・登録を知らせるモーダル画面を作成する
+
 
