data_edit.php、user_edit.phpにモーダル機能を実装した

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,3 +1,17 @@
+OK新規ユーザー登録機能
+OKログイン／ログアウト機能
+OKファイルインポート機能
+OKファイルエクスポート機能
+OKデータ一覧表示機能
+OKソート機能
+OKフリーワード検索機能
+OKページング機能
+OKデータ新規登録機能
+OKデータ修正機能
+OKデータ削除機能
+・データ変更履歴表示機能（誰がいつ何をしたかが分かる）
+・ユーザー編集／削除機能（管理権限を持ったユーザーのみ）
+
 4/4
 済iPhone5の横幅ではH1タグがはみ出る
 済ユーザー登録機能
@@ -12,6 +26,11 @@
 済・check.phpからDBに登録、修正する
 済データ削除を出来るようにする
 済新規入力、最低限邦題を入れない限り確認画面に遷移させない
-・登録を知らせるモーダル画面を作成する
+済登録を知らせるモーダル画面を作成する
+4/11
+済データダウンロード機能
+・アクセスログ
+・ユーザーリストページ作成　編集、削除リンク入り
+
 
 
