バージョン管理機能等を実装

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -29,8 +29,23 @@ OKデータ削除機能
 済登録を知らせるモーダル画面を作成する
 4/11
 済データダウンロード機能
-・アクセスログ
-・ユーザーリストページ作成　編集、削除リンク入り
+済アクセスログ
+済ユーザーリストページ作成　編集、削除リンク入り
 
+・バージョン履歴
+済メニュー画面作成
+  ナビバーに「バージョン履歴」を表示
+  ナビバーにバージョンNo.を表示
+済登録画面作成
+済履歴一覧画面 変更、削除選択可能
+済変更画面
+済削除画面
 
+・ナビバー　「バージョンNo.」「メニュー」「ログアウト」だけの表示にする
+・グローバルメニュー画面を作成する
+
+4/13 
+済バージョンテーブル numberカラムを廃止する
+・一般ユーザーにアクセスさせない関数を作る
+・ユーザーネームをドロップダウンで選択する
 
