個人設定ページを実装。操作ログの取り方を修正

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -49,6 +49,6 @@ OKデータ削除機能
 済ユーザーネームをドロップダウンで選択する
 
 4/15
-・ナビバーに「個人設定」を設ける
-・表示件数設定、ページ遷移の直前に「5」に戻ってします
+済ナビバーに「個人設定」を設ける
+・表示件数設定、ページ遷移の直前に「5」に戻ってしまう
 
