データの内容を変更しそれにともないDB,一覧レイアウトを変更

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -34,15 +34,11 @@ OKデータ削除機能
 
 ・バージョン履歴
 済メニュー画面作成
-  ナビバーに「バージョン履歴」を表示
-  ナビバーにバージョンNo.を表示
+済  タイトルバーに「バージョン履歴」を表示
 済登録画面作成
 済履歴一覧画面 変更、削除選択可能
 済変更画面
 済削除画面
-
-・ナビバー　「バージョンNo.」「メニュー」「ログアウト」だけの表示にする
-・グローバルメニュー画面を作成する
 
 4/13 
 済バージョンテーブル numberカラムを廃止する
@@ -50,5 +46,11 @@ OKデータ削除機能
 
 4/15
 済ナビバーに「個人設定」を設ける
-・表示件数設定、ページ遷移の直前に「5」に戻ってしまう
+済表示件数設定、ページ遷移の直前に「5」に戻ってしまう
+
+・操作ログ　日付で昇順、降順並び替えを出来るようにする
+
+4/16
+・操作ログもソートできるようにする
+済データが１ページ分しかないときはページネーションさせない
 
