ファイルサイズ、ファイル属性、ファイル有無でエラーメッセージが表示されるようにした。

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -54,3 +54,8 @@ OKデータ削除機能
 ・操作ログもソートできるようにする
 済データが１ページ分しかないときはページネーションさせない
 
+ファイルが選択されているか	NO	→アップロードするCSVファイルを選択してください。
+				Yes	ファイルはCSV形式か	NO	→CSV形式でアップロードしてください。
+								YES	ファイルサイズを最大サイズ以下か	NO	→"ファイルサイズが１MBを超過しています。
+														YES	→ アップロードを成功したか	NO →"失敗しました
+																			YES →"アップロードしました
