userテーブルにsession_id,login_atのカラムを追加。ログイン時に記録、ログアウト時にNULLにアップデートするようにした。

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -59,3 +59,6 @@ OKデータ削除機能
 								YES	ファイルサイズを最大サイズ以下か	NO	→"ファイルサイズが１MBを超過しています。
 														YES	→ アップロードを成功したか	NO →"失敗しました
 																			YES →"アップロードしました
+
+4/23
+・userテーブルにセッションIDとlogin_atカラムを設ける
